# WEB_HW_14

./: main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 681f466d77a4_init.py  c0e32c766828_add_verify_for_user.py  ccee5407c709_add_users.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
